# claude-workflow-plugin

./: .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  INDEX.md  LESSONS.md  Makefile  README.md  SECURITY.md  TECHNICAL_DEBT.md  install.ps1  install.sh  tests  uninstall.ps1  uninstall.sh
.beads/: issues.jsonl
.claude/: model-ranking  rubric-config  settings.json
.claude-plugin/: plugin.json
.claude/agents/: qa.md  (+6 more)
.claude/tests/e2e/fixtures/python-django-bug/: conftest.py  fixture.yaml  manage.py  pyproject.toml
.claude/tests/e2e/fixtures/python-django-bug/.beads/: issues.jsonl
.claude/tests/e2e/fixtures/python-django-bug/.claude/scripts/: impact-report.sh  lessons.sh  qa-gate.sh  workflow-model-apply.sh
.claude/tests/e2e/fixtures/python-django-bug/.claude/skills/workflow-engine/: SKILL.md
.claude/tests/e2e/fixtures/python-django-bug/accounts/: __init__.py  apps.py  models.py
.claude/tests/e2e/fixtures/python-django-bug/accounts/migrations/: 0001_initial.py  __init__.py
.claude/tests/e2e/fixtures/python-django-bug/accounts/tests/: __init__.py  test_models.py
.claude/tests/e2e/fixtures/python-django-bug/config/: __init__.py  settings.py
docs/: AGENTLINT_REPORT.html  AGENTLINT_REPORT.jsonl  AGENTLINT_REPORT.md  AGENTS.md  ARCHITECTURE.md  BEADS.md  HOOKS.md  MCP_SERVERS.md  QUICKSTART.md  RELEASE_AUDIT.md  TROUBLESHOOTING.md  WORKFLOW.md  al-2026-05-09-115501-e029af5d.md  al-2026-06-11-162927-be22c771.md  al-2026-06-11-192450-3afc944d.md  al-2026-06-11-193529-ca095329.md  al-2026-06-11-230915-a643bd1a.md  (+6 more)
(+256 files in other folders)
